Clear sonar warning